# robot-arm-controller

./: README.md
base_controller/: CMakeLists.txt  package.xml
base_controller/launch/: a3.launch
base_controller/src/: baseController.cpp
cubic_polynomial_planner/: CMakeLists.txt  package.xml
cubic_polynomial_planner/launch/: pose_action_server.launch
cubic_polynomial_planner/src/: Server.cpp
dynamic_controller/: CMakeLists.txt  package.xml
dynamic_controller/config/: config.yaml  config2.yaml
dynamic_controller/launch/: joint_controller.launch  pose_controller.launch
dynamic_controller/src/: jointController.cpp  jointPlanner.cpp  poseController.cpp  posePlanner.cpp
highlevel_controller/: CMakeLists.txt  package.xml
highlevel_controller/config/: a7-clean-1.yaml  a7-clean-2.yaml  a8.yaml
highlevel_controller/launch/: a7-clean-1.launch  a7-clean-2.launch  a7.launch  a8.launch
highlevel_controller/src/: Client.cpp  GripperClient.cpp
highlevel_msgs/: CMakeLists.txt  package.xml
highlevel_msgs/action/: PoseCommand.action
highlevel_msgs/srv/: MoveTo.srv
kinematic_controller/: CMakeLists.txt  package.xml
kinematic_controller/config/: config.yaml
kinematic_controller/keyboard_controller/: CMakeLists.txt  package.xml
kinematic_controller/keyboard_controller/launch/: a1.launch
kinematic_controller/keyboard_controller/src/: main.cpp
kinematic_controller/launch/: joint_controller.launch  pose_controller.launch
kinematic_controller/src/: jointController.cpp  taskController.cpp
potential_field_planner/: CMakeLists.txt  package.xml
potential_field_planner/src/: potentialFieldPlanner.cpp
