<?xml version="1.0"?>
<package format="2">
  <name>cubic_polynomial_planner</name>
  <version>0.1.0</version>
  <description>cubic_polynomial_planner</description>
  <maintainer email="ziqi.chu@mail.mcgill.ca">Alice Chu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pinocchio</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>actionlib</depend>
  <depend>highlevel_msgs</depend>
  
  
</package>
