<?xml version="1.0"?>
<package format="2">
  <name>dynamic_controller</name>
  <version>0.1.0</version>
  <description>dynamic controller</description>
  <maintainer email="ziqi.chu@mail.mcgill.ca">Alice Chu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>std_msgs</depend>
  <depend>highlevel_msgs</depend>
  <depend>pinocchio</depend>
  <depend>roslib</depend>
</package>
