<?xml version="1.0"?>
<package format="2">
  <name>highlevel_controller</name>
  <version>0.1.0</version>
  <description>highlevel_controller</description>
  <maintainer email="ziqi.chu@mail.mcgill.ca">Alice Chu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pinocchio</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>actionlib</depend>
  <depend>highlevel_msgs</depend>
  <depend>control_msgs</depend>
  <depend>cubic_polynomial_planner</depend>
  
  
</package>
