<?xml version="1.0"?>
<package format="2">
  <name>potential_field_planner</name>
  <version>0.1.0</version>
  <description>Potential Field Planner</description>
  
  <maintainer email="ziqi.chu@mail.mcgill.ca">Alice Chu</maintainer>
  <license>BSD</license>
  <author email="ziqi.chu@mail.mcgill.ca">Alice Chu</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
 
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen3</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>


</package>

