<?xml version="1.0"?>
<package format="2">
  <name>keyboard_controller</name>
  <version>0.0.0</version>
  <description>The keyboard_controller package</description>

  <maintainer email="ziqi.chu@mail.mcgill.ca">alicechu</maintainer>


  <license>BSD</license>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>


</package>
